# fish-project

./: .gitignore  Dockerfile  README.md  fish-project.cabal  nixpacks.toml
app/: Main.hs
data/: data1.csv
static/: index.html
