cabal-version:      2.4
name:               fish-project
version:            0.1.0.0
build-type:         Simple

executable fish-project
    main-is:          Main.hs
    hs-source-dirs:   app
    build-depends:
        base >=4.14 && <5,
        cassava,
        bytestring,
        vector,
        scotty,
        aeson,
        text,
        wai-middleware-static,
        warp
    default-language: Haskell2010